--- a/ISI1_notes.tex
+++ b/ISI1_notes.tex
@@ -971,4 +971,123 @@ sd(aX+b) & = \sqrt{Var(aX+b)} \\
 \end{array}
 \end{equation*}
 \end{theorem}
+\begin{definition}
+In general, the expected value $\mu_n^{'} = E(X^n)$ is called
+n\textsuperscript{th} moment of random variable $X$. The expected value $\mu_n =
+E(X -\mu)^n$ is called the n\textsuperscript{th} central moment.
+
+Expected value of $X$ is the 1\textsuperscript{st} moment and the variance of $X$ is the 2\textsuperscript{nd}
+moment of $X$. These two are called also the 1\textsuperscript{st} and
+2\textsuperscript{nd} order properties of the (univariate) random variable X.
+  $$
+  \begin{array}{ll}
+  E(X)=\mu_{1}^{´}, & Var(X) = \mu_2 = \mu_{2}^{´} - (\mu_{1}^{´})^2
+  \end{array}
+  $$
+1\textsuperscript{st} moment specifies the location of the distribution. The
+2\textsuperscript{nd} moment is related to the width of the distribution. The
+higher moments specify the shape of the distribution, eg. 3\textsuperscript{rd}
+moment is related to the skewness of the distribution, and the
+4\textsuperscript{th} on the centroids.
+
+The moments are ``in the order of importance'': expected value is often the most
+important single number we can specify for the random variable $X$; the
+variance is the second most important etc.
+\end{definition}
+
+%new chapter, starts from notes 8, page 2
+\chapter{Bivariate random variables}
+\begin{definition}
+Let $X$ and $Y$ be two discrete random variables. The joint pmf is defined as
+\begin{equation*}
+\renewcommand{\arraystretch}{1.6}
+\begin{array}{lll}
+&f(x,y) = P(X=x,Y=y) &\text{ for all } x,y. \\
+\text{or} & f_{X,Y}(x,y) = P(X=x, Y=y) & f:\mathbb{R}^2 \rightarrow \mathbb{R}
+\end{array}
+\end{equation*}
+\end{definition}
+\begin{example}
+\label{exampleTwoDice1}
+Two dice.
+\begin{equation*}
+\renewcommand{\arraystretch}{1.6}
+\begin{array}{l}
+X = \text{The sum of two dice} \\
+Y = \left | \text{The difference of two dice} \right |
+\end{array}
+\end{equation*}
+The sample space includes $\left\{ (1,1), (1,2), (1,3),\ldots,(6,6) \right\}$.
+There are total of 36 different possibilities, and they are are equally likely
+with probability $\frac{1}{36}$.
+
+The joint pmf of $(X,Y)$ can be expressed in a 2x2 table
+\ref{exampleTwoDice1Table1}
+\begin{table}[h]
+\caption{Probabilities of joint pmf $f_{X,Y}(x,y)$ (or just $f(x,y)$)}
+\label{exampleTwoDice1Table1}
+\renewcommand{\arraystretch}{1.4}
+\renewcommand{\tabcolsep}{0.3cm}
+\begin{tabular}{c c|c c c c c c c c c c c}
+&&&&&&$X$ \\ \hline
+&& 2 & 3 & 4 & 5 & 6 & 7 & 8 & 9 & 10 & 11 & 12 \\ \hline
+&0 & $\frac{1}{36}$ & 0 & $\frac{1}{36}$ & 0 & $\frac{1}{36}$ & 0 &
+$\frac{1}{36}$ & 0 & $\frac{1}{36}$ & 0 & $\frac{1}{36}$ \\
+&1 & 0 & $\frac{2}{36}$ & 0 & $\frac{2}{36}$ & 0 & $\frac{2}{36}$ & 0 &
+$\frac{2}{36}$ & 0 & $\frac{2}{36}$ & 0 \\
+&2 & 0 & 0 & $\frac{2}{36}$ & 0 & $\frac{2}{36}$ & 0 &$\frac{2}{36}$ & 0 & $\frac{2}{36}$ & 0
+& 0 \\
+$Y$&3 & 0 & 0 & 0 &  $\frac{2}{36}$ & 0 &  $\frac{2}{36}$ & 0 &  $\frac{2}{36}$
+& 0 & 0 & 0 \\
+&4 & 0 & 0 & 0 & 0 &  $\frac{2}{36}$ & 0 &  $\frac{2}{36}$ & 0 & 0 & 0 & 0 \\
+&5 & 0 & 0 & 0 & 0 & 0 & $\frac{2}{36}$ & 0 & 0 & 0 & 0 & 0 \\
+\end{tabular}
+\end{table}
+%TODO: There was marginal pmf table for Y on notes 8 page 2. Is it needed?
+\end{example}
+\begin{itemize}
+  \item The joint pmf completely defines the probabilities of all combinations
+  of $X$ and $Y$.
+  $$P((X,Y) \in A) = \sum_{(x,y) \in A}f(x,y)$$
+  \item From joint pmf of example \ref{exampleTwoDice1}, a probability that sum
+  of two dices is in range $(2,5]$, and that at same time, the difference of
+  two dices is in range $[0,1]$. $$P(2 < X \leq 5, 0 \leq Y \leq 1) =
+  \frac{2}{36} + 0 + \frac{2}{36} + 0 + \frac{1}{36} + 0 = \frac{5}{36}$$
+  \item The expected value is defined as
+  $$E(g(x,y)) = \sum_{x,y \in \mathbb{R}^2}g(x,y)f(x,y)$$
+  \item Expected value from joint pmf of example \ref{exampleTwoDice1}
+  \begin{equation*}
+  \renewcommand{\arraystretch}{1.6}
+  \begin{array}{ll}
+  E(XY) & = \sum_{(x,y) \in \mathbb{R}^2}xyf(x,y) \\
+  & = 2*0*\frac{1}{36}+4*0*\frac{1}{36}+\ldots+12*0*\frac{1}{36}\\
+  &~~ +3*1*\frac{2}{36}+5*1*\frac{2}{36}+\ldots+7*5*\frac{2}{36} \\
+  &=13\frac{11}{18}
+  \end{array}
+  \end{equation*}
+  \item Them marginal pmf specifies the univariate distribution of one
+  component of $(X,Y)$ over all possible values of the other component.
+\end{itemize}
+\begin{theorem}
+Let $(X,Y)$ be discrete bivariate vector with joint pmf $f_{X,Y}(x,y)$. The
+marginal pmf's of it are given by
+$$f_X(x) = \sum_{y \in \mathbb{R}}f_{X,Y}(x,y))$$
+$$f_Y(y) = \sum_{x \in \mathbb{R}}f_{X,Y}(x,y))$$
+\end{theorem}
+\begin{itemize}
+  \item From example \ref{exampleTwoDice1}, we get following marginal pdf (seen
+  in table \ref{exampleTwoDice1MarginalPmfTable1}) for random variable $Y$ of
+  joint pmf.
+  \begin{table}[h]
+  \caption{Probabilities of marginal pmf $f_{Y}(y)$}
+  \label{exampleTwoDice1MarginalPmfTable1}
+  \renewcommand{\arraystretch}{1.4}
+  \renewcommand{\tabcolsep}{0.3cm}
+  \begin{tabular}{c|c c c c c c|c}
+  Y & 0 & 1 & 2 & 3 & 4 & 5 & $\sum$ \\ \hline
+  $P(Y=y)$ & $\frac{6}{36}$ & $\frac{10}{36}$ & $\frac{8}{36}$ & $\frac{6}{36}$
+  & $\frac{4}{36}$ & $\frac{2}{36}$ & $\frac{36}{36} = 1$
+  \end{tabular}
+  \end{table}
+\end{itemize}
 \end{document}
