--- a/ISI1_notes.tex
+++ b/ISI1_notes.tex
@@ -42,7 +42,8 @@
 
 \newcommand{\beq}{\begin{equation*}}
 \newcommand{\eeq}{\end{equation*}}
-
+\newcommand{\ud}{\,\mathrm{d}}
+\newcommand{\ureal}{\,\mathbb{R}}
 \DeclareMathOperator{\var}{var}
 \DeclareMathOperator{\cov}{cov}
 \DeclareMathOperator{\E}{E}
@@ -636,7 +637,7 @@ F(x; p) = \left\{
   \item For continuous RV, the sum of pmf is replaced by integral\ldots
   $$P(X \leq x) = F_X(x) = \int_{-\infty}^{x} f_X(t)dt$$
   \item \ldots which also implies
-  $$\frac{d}{dx}F_X(x)=f_X(x)$$
+  $$\frac{d}{\ud x}F_X(x)=f_X(x)$$
 \end{itemize}
 \begin{definition}
 Function $f_X(x)$ above is called probability density function (pdf for short)
@@ -648,7 +649,7 @@ A function $f(x)$ is a pdf or pmf, if
   \item[a)]$f(x) \geq 0 $ for all x
   \item[b)]$$\sum_X f(x) = 1~\text{(if pmf)}$$
   or
-  $$\int_{-\infty}^{\infty} f(x) dx = 1~\text{(if pdf)}$$
+  $$\int_{-\infty}^{\infty} f(x) \ud x = 1~\text{(if pdf)}$$
 \end{itemize}
 %TODO: Are the plots for pmf and pdf needed here?
 \end{theorem}
@@ -742,8 +743,8 @@ and $\mathcal{Y} = \{y: y=(g(x)~\text{for some } x \in \mathcal{X}\}$
 Suppose $X \sim Uniform(0, 1)$. Now $F_X(x) = x,~ 0 < x < 1$. Consider
 transformation $Y=g(x) = -ln(x)$.
 \begin{itemize}
-  \item $ln(x)$ is decreasing, since $\frac{d}{dx}(-ln(x)) = -\frac{1}{x} < 0$
-  when $x > 0$
+  \item $ln(x)$ is decreasing, since $\frac{\ud }{\ud x}(-ln(x)) = -\frac{1}{x} <
+  0$ when $x > 0$
   $$\mathcal{X} \in (0,1) \rightarrow \mathcal{Y} \in (0, \infty)$$
 \item Because $g(x)$ is decreasing, the minimum of $Y$ will be obtained at the
 maximum value of $X$.
@@ -757,7 +758,7 @@ $$x = e^{-y} = g^{-1}(y)$$
 \item The cdf of Y is
 $$F_Y(y) = 1 - F_X(g^{-1}(y)) = 1 - F_X(e^{-y}) = 1 - e^{-y}$$
 \item The pdf of Y is
-$$f_Y(y) = \frac{dF_Y(y)}{dy} = \frac{d(1-e^{-y})}{dy} = -e^{-y}(-1)=e^{-y}$$
+$$f_Y(y) = \frac{\ud F_Y(y)}{\ud y} = \frac{\ud (1-e^{-y})}{\ud y} = -e^{-y}(-1)=e^{-y}$$
 %TODO: In notes, it was exponential pdf, but capital F is suposed to mean cdf.
 \item Note: $F_Y(y)$ is called the exponential cdf with the rate parameter 1.
 $f_Y(y)$ is the corresponding density.
@@ -774,7 +775,7 @@ The pdf of $Y$ is
 \begin{equation*} f_Y(y) =
 \left\{
 \begin{array}{ll}
-f_X(g^{-1}(y)) \vert \frac{d}{dx}g^{-1}(y) \vert & y \in \mathcal{Y} \\
+f_X(g^{-1}(y)) \vert \frac{\ud }{\ud x}g^{-1}(y) \vert & y \in \mathcal{Y} \\
 0 & otherwise
 \end{array} \right.
 \end{equation*}
@@ -831,8 +832,8 @@ Expected value or mean (odotusarvo) of a random variable $g(X)$ is
 \begin{equation*} E(g(X)) =
 \left\{
 \begin{array}{ll}
-\int_{-\infty}^{\infty} g(x)f(x) dx & \text{if $x$ is continuous} \\
-\sum_{x \in \mathcal{X}} g(x)f(x) dx & \text{if $x$ is discrete}
+\int_{-\infty}^{\infty} g(x)f(x) \ud x & \text{if $x$ is continuous} \\
+\sum_{x \in \mathcal{X}} g(x)f(x)& \text{if $x$ is discrete}
 \end{array} \right.
 \end{equation*}
 provided that sum/integral exists. If $E(g(X)) = \infty$, we say that the
@@ -842,8 +843,8 @@ expected value does not exist.
 \begin{equation*} E(g(X)) =
 \left\{
 \begin{array}{ll}
-\int_{-\infty}^{\infty} xf(x) dx & \text{if $x$ is continuous} \\
-\sum_{x \in \mathcal{X}} xf(x) dx & \text{if $x$ is discrete}
+\int_{-\infty}^{\infty} xf(x) \ud x & \text{if $x$ is continuous} \\
+\sum_{x \in \mathcal{X}} xf(x) & \text{if $x$ is discrete}
 \end{array} \right.
 \end{equation*}
 
@@ -859,13 +860,13 @@ And the expected value is
 \begin{equation*}
 \renewcommand{\arraystretch}{1.6}
 \begin{array}{ll}
-E(X) & = \int_{0}^{\infty} xf_X(x) dx \\
-& =-\int_{0}^{\infty}x\left (-\frac{1}{\lambda}e^{-\frac{x}{\lambda}}\right )dx
+E(X) & = \int_{0}^{\infty} xf_X(x) \ud x \\
+& =-\int_{0}^{\infty}x\left (-\frac{1}{\lambda}e^{-\frac{x}{\lambda}}\right )\ud x
 \\
 & = \Big|_{0}^{\infty}
--xe^{-\frac{x}{\lambda}}+\int_{0}^{\infty}1e^{-\frac{x}{\lambda}}dx \\
+-xe^{-\frac{x}{\lambda}}+\int_{0}^{\infty}1e^{-\frac{x}{\lambda}}\ud x \\
 & = -0-(-0)+\left (
--\lambda\int_{0}^{\infty}-\frac{1}{\lambda}e^{-\frac{x}{\lambda}}dx \right ) \\
+-\lambda\int_{0}^{\infty}-\frac{1}{\lambda}e^{-\frac{x}{\lambda}}\ud x \right ) \\
 & =-\lambda \Big|_{0}^{\infty} e^{-\frac{x}{\lambda}} \\
 & = -\lambda(0-1) = \lambda
 \end{array}
@@ -907,10 +908,10 @@ following rules hold:
 \end{theorem}
 \textbf{Note} $E(Y) = E(g(X))$ can be computed in two ways:
 \begin{itemize}
-  \item[1)] $E(g(x)) = \int_{-\infty}^{\infty}g(x)f_X(x)dx$
-  \item[2)] $E(g(x)) = E(Y) = \int_{-\infty}^{\infty}yf_Y(y)dy =
-  \int_{-\infty}^{\infty}yf_X(g^{-1}(y)) \left|\left| \frac{d}{dy}g^{-1}(y)
-  \right|\right| dy$ %TODO: Better way to do double lines?
+  \item[1)] $E(g(x)) = \int_{-\infty}^{\infty}g(x)f_X(x)\ud x$
+  \item[2)] $E(g(x)) = E(Y) = \int_{-\infty}^{\infty}yf_Y(y)\ud y =
+  \int_{-\infty}^{\infty}yf_X(g^{-1}(y)) \left|\left| \frac{\ud }{\ud y}g^{-1}(y)
+  \right|\right| \ud y$ %TODO: Better way to do double lines?
 \end{itemize}
 \begin{definition}
 The variance is defined as
@@ -928,13 +929,13 @@ Let $X \sim Exponential(\lambda)$, meaning the $X$ has pdf $f_X(x) =
 Var(X) & = E\left[(x-\lambda)^2\right] \\
 & = E(g(X)) \\
 & =
-\int_{-\infty}^{\infty}(x-\lambda)^2\frac{1}{\lambda}e^{-\frac{x}{\lambda}}dx \\
+\int_{-\infty}^{\infty}(x-\lambda)^2\frac{1}{\lambda}e^{-\frac{x}{\lambda}}\ud x \\
 &=
-\int_{-\infty}^{\infty}(x^2-2x\lambda+\lambda^2)\frac{1}{\lambda}e^{-\frac{x}{\lambda}}dx
+\int_{-\infty}^{\infty}(x^2-2x\lambda+\lambda^2)\frac{1}{\lambda}e^{-\frac{x}{\lambda}}\ud x
 \\
-&= \int_{-\infty}^{\infty}x^2\frac{1}{\lambda}e^{-\frac{x}{\lambda}}dx -
-\int_{-\infty}^{\infty}2x\lambda \frac{1}{\lambda}e^{-\frac{x}{\lambda}}dx+
-\int_{-\infty}^{\infty}\lambda^2 \frac{1}{\lambda}e^{-\frac{x}{\lambda}}dx \\
+&= \int_{-\infty}^{\infty}x^2\frac{1}{\lambda}e^{-\frac{x}{\lambda}}\ud x -
+\int_{-\infty}^{\infty}2x\lambda \frac{1}{\lambda}e^{-\frac{x}{\lambda}}\ud x+
+\int_{-\infty}^{\infty}\lambda^2 \frac{1}{\lambda}e^{-\frac{x}{\lambda}}\ud x \\
 &=\text{(integrate each term by parts)} = \lambda^2
 \end{array}
 \end{equation*}
@@ -954,10 +955,10 @@ Var(X)& = E\left[(X-E(X))^2\right] \\
 So $Var(X) = E\left[(X-E(X))^2\right] = E(X^2) - [E(X)]^2$. For continuous
 random variables, the variance can be approximated numerically using integrate.
 See example 1.4. in \verb#notes.pdf#. We can either use
-$$Var(X)=\int_{-\infty}^{\infty}[X-E(X)]^2f(x)dx$$
+$$Var(X)=\int_{-\infty}^{\infty}[X-E(X)]^2f(x)\ud x$$
 or
-$$Var(X) = E(X^2)-[E(X)]^2 = \int_{-\infty}^{\infty}x2f(x)dx 
-- \left(\int_{-\infty}^{\infty}xf(x)dx \right )^2$$
+$$Var(X) = E(X^2)-[E(X)]^2 = \int_{-\infty}^{\infty}x2f(x)\ud x 
+- \left(\int_{-\infty}^{\infty}xf(x)\ud x \right )^2$$
 \begin{theorem}
 Let $X$ be a random variable with a finite variance and $a$ and $b$ are finite
 constants. Then
@@ -1003,7 +1004,7 @@ Let $X$ and $Y$ be two discrete random variables. The joint pmf is defined as
 \renewcommand{\arraystretch}{1.6}
 \begin{array}{lll}
 &f(x,y) = P(X=x,Y=y) &\text{ for all } x,y. \\
-\text{or} & f_{X,Y}(x,y) = P(X=x, Y=y) & f:\mathbb{R}^2 \rightarrow \mathbb{R}
+\text{or} & f_{X,Y}(x,y) = P(X=x, Y=y) & f:\ureal^2 \rightarrow \ureal
 \end{array}
 \end{equation*}
 \end{definition}
@@ -1043,7 +1044,6 @@ $Y$&3 & 0 & 0 & 0 &  $\frac{2}{36}$ & 0 &  $\frac{2}{36}$ & 0 &  $\frac{2}{36}$
 &5 & 0 & 0 & 0 & 0 & 0 & $\frac{2}{36}$ & 0 & 0 & 0 & 0 & 0 \\
 \end{tabular}
 \end{table}
-%TODO: There was marginal pmf table for Y on notes 8 page 2. Is it needed?
 \end{example}
 \begin{itemize}
   \item The joint pmf completely defines the probabilities of all combinations
@@ -1054,12 +1054,12 @@ $Y$&3 & 0 & 0 & 0 &  $\frac{2}{36}$ & 0 &  $\frac{2}{36}$ & 0 &  $\frac{2}{36}$
   two dices is in range $[0,1]$. $$P(2 < X \leq 5, 0 \leq Y \leq 1) =
   \frac{2}{36} + 0 + \frac{2}{36} + 0 + \frac{1}{36} + 0 = \frac{5}{36}$$
   \item The expected value is defined as
-  $$E(g(x,y)) = \sum_{x,y \in \mathbb{R}^2}g(x,y)f(x,y)$$
+  $$E(g(x,y)) = \sum_{x,y \in \ureal^2}g(x,y)f(x,y)$$
   \item Expected value from joint pmf of example \ref{exampleTwoDice1}
   \begin{equation*}
   \renewcommand{\arraystretch}{1.6}
   \begin{array}{ll}
-  E(XY) & = \sum_{(x,y) \in \mathbb{R}^2}xyf(x,y) \\
+  E(XY) & = \sum_{(x,y) \in \ureal^2}xyf(x,y) \\
   & = 2*0*\frac{1}{36}+4*0*\frac{1}{36}+\ldots+12*0*\frac{1}{36}\\
   &~~ +3*1*\frac{2}{36}+5*1*\frac{2}{36}+\ldots+7*5*\frac{2}{36} \\
   &=13\frac{11}{18}
@@ -1071,12 +1071,12 @@ $Y$&3 & 0 & 0 & 0 &  $\frac{2}{36}$ & 0 &  $\frac{2}{36}$ & 0 &  $\frac{2}{36}$
 \begin{theorem}
 Let $(X,Y)$ be discrete bivariate vector with joint pmf $f_{X,Y}(x,y)$. The
 marginal pmf's of it are given by
-$$f_X(x) = \sum_{y \in \mathbb{R}}f_{X,Y}(x,y))$$
-$$f_Y(y) = \sum_{x \in \mathbb{R}}f_{X,Y}(x,y))$$
+$$f_X(x) = \sum_{y \in \ureal}f_{X,Y}(x,y))$$
+$$f_Y(y) = \sum_{x \in \ureal}f_{X,Y}(x,y))$$
 \end{theorem}
 \begin{itemize}
-  \item From example \ref{exampleTwoDice1}, we get following marginal pdf (seen
-  in table \ref{exampleTwoDice1MarginalPmfTable1}) for random variable $Y$ of
+  \item From example \ref{exampleTwoDice1}, we get marginal pdf seen
+  in table \ref{exampleTwoDice1MarginalPmfTable1} for random variable $Y$ of
   joint pmf.
   \begin{table}[h]
   \caption{Probabilities of marginal pmf $f_{Y}(y)$}
@@ -1089,5 +1089,109 @@ $$f_Y(y) = \sum_{x \in \mathbb{R}}f_{X,Y}(x,y))$$
   & $\frac{4}{36}$ & $\frac{2}{36}$ & $\frac{36}{36} = 1$
   \end{tabular}
   \end{table}
+  \item Note: Marginal pmf's do not completely specify the probabilities for
+  all combinations of $(X,Y)$
+  \item For continuous bivariate random variables, the joint pdf is defined
+  correspondingly
+\end{itemize}
+\begin{definition}
+A function $f(x,y)$ ($\ureal^2 \rightarrow \ureal$) is called the joint
+pdf of the continuous random variable $(X,Y)$, if for every $A \in \ureal^2$
+we have
+$$P((X,Y) \in A) = \iint_{A}f(x,y)\ud x \ud y$$ %TODO: Better way to mark
+% integral lower part for dual integral?
+The difference to univariate case is that the integration is done over
+2-dimensional set $A$. The expected value is defined as
+$$E(g(X,Y)) = \int_{-\infty}^{\infty}\int_{-\infty}^{\infty}g(x,y)f(x,y) \ud x
+ \ud y$$
+ The marginal pdf's are defined as before, but the sums are replaced by
+ integrals
+ \begin{equation*}
+ \renewcommand{\arraystretch}{1.6}
+ \begin{array}{ll}
+ f_X(x) = \int_{-\infty}^{\infty}f(x,y) \ud y & -\infty < x < \infty \\
+ f_Y(y) = \int_{-\infty}^{\infty}f(x,y) \ud x & -\infty < x < \infty
+ \end{array}
+ \end{equation*}
+ Any function satisfying rules a) and b) bellow is a joint pdf for some random
+ variable $(X,Y)$.
+ \begin{itemize}
+   \item[a)] $f(x,y) \geq 0$ for all $x,y \in \ureal^2$
+   \item[b)] $\int_{-\infty}^{\infty}\int_{-\infty}^{\infty}f(x,y) \ud x
+   \ud y = 1$
+ \end{itemize}
+\end{definition}
+\begin{example}
+Define a joint pdf by
+\begin{equation*}
+\begin{array}{lll}
+& f(x,y)=6xy^2 & 0 < x < 1 \text{ and } 0 < y < 1 \\
+\text{and} & f(x,y) = 0 & \text{otherwise}
+\end{array}
+\end{equation*}
+%TODO: Some example 3-d plot for joint pdf in notes 8 page 6. Is it needed?
+Is this a valid pdf?
+ \begin{itemize}
+   \item[a)] $f(x,y) = 6xy^2 \geq 0$ for all $x,y \in \ureal^2$
+   \item[b)] Is the volume under the curve 1?
+   \begin{equation*}
+   \renewcommand{\arraystretch}{1.6}
+   \begin{array}{ll}
+   \int_{-\infty}^{\infty}\int_{-\infty}^{\infty}f(x,y) \ud x \ud y & =
+   \int_{0}^{1}\int_{0}^{1}f(x,y) \ud x \ud y \\
+   & = \int_{0}^{1}\int_{0}^{1}6xy^2 \ud x \ud y \\
+   & = \int_{0}^{1}3y^2 \ud y \\
+   & = \big|_{0}^{1}~ 3*\frac{1}{3}y^3 \\
+   & = \big|_{0}^{1}~ y^3 \\
+   & = 1^3 - 0^3 = 1 \\
+   \end{array}
+   \end{equation*}
+   %TODO: Some steps of solving were passed in notes 8 page 6. Are needed?
+   The volume under curve is 1, meaning it is a proper pdf.
+ \end{itemize}
+Lets compute some probabilities:
+\begin{equation*}
+   \renewcommand{\arraystretch}{1.6}
+   \begin{array}{ll}
+   P(X < 0.5, Y < 0.5) & = \int_{0}^{\frac{1}{2}}\int_{0}^{\frac{1}{2}}6xy^2 \ud
+   x \ud y \\
+   & = \int_{0}^{\frac{1}{2}}\big|_{0}^{\frac{1}{2}}3x^2y^2 \ud y \\
+   & = \int_{0}^{\frac{1}{2}}3\frac{1}{4}y^2 \ud y \\
+   & = \int_{0}^{\frac{1}{2}}\frac{3}{4}y^2 \ud y \\
+   & = \big|_{0}^{\frac{1}{2}}\frac{3}{12}y^3 \ud y \\
+   & = \frac{1}{4}\left (\frac{3}{12} \right )^3 - 0 = \frac{1}{4*8} =
+   \frac{1}{32}
+   \end{array}
+   \end{equation*}
+The marginal pdf of $X$ is for $0 < x < 1$
+\begin{equation*}
+   \renewcommand{\arraystretch}{1.6}
+   \begin{array}{ll}
+   f_X(x) & = \int_{-\infty}^{\infty}f(x,y) \ud y\\
+   & = \int_{0}^{1}6xy^2 \ud y \\
+   & = \big|_{0}^{1} 2xy^3 \\
+   & = 2x*1^3-2x*0^3 = 2x
+   \end{array}
+   \end{equation*}
+Example probability for marginal pdf
+\begin{equation*}
+\renewcommand{\arraystretch}{1.6}
+\begin{array}{ll}
+P(\frac{1}{2} < x < \frac{3}{4}) &=\int_{\frac{1}{2}}^{\frac{3}{4}}f_X(x) \ud x\\
+& =\int_{\frac{1}{2}}^{\frac{3}{4}}2x \ud x \\
+& =\big|_{\frac{1}{2}}^{\frac{3}{4}} x^2\\
+& = (\frac{3}{4})^2-(\frac{1}{2})^2 \\
+& = \frac{9}{16}-\frac{4}{16} = \frac{5}{16}
+\end{array}
+\end{equation*}
+\end{example}
+\begin{itemize}
+  \item The joint cdf is defined by
+  $$F(x,y) = P(X \leq x, Y \leq y)\text{ for all } (x,y) \in \ureal^2$$
+  \item Not convenient for discrete random variables, but for continuous case,
+  we have
+  $$F(x,y) = \int_{-\infty}^{x}\int_{-\infty}^{y}f(s,t) \ud s
+ \ud t $$
+ $$\frac{\ud F(x,y)}{\ud x \ud y} = f(x,y)$$
 \end{itemize}
 \end{document}
